Salesforce automation framework | Lead creation and lead conversion